--- a/style.css
+++ b/style.css
@@ -74,19 +74,9 @@ h1 {
 .btn.copy {
     padding: 10px;
     background-color: #28a745;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-.btn.copy svg {
-    fill: #fff;
-    width: 20px;
-    height: 20px;
+    border-radius: 5px;
+    font-size: 20px;
+    line-height: 1;
 }
 
 .btn.copy:hover {
@@ -116,4 +106,3 @@ h1 {
     opacity: 1;
     bottom: 50px;
 }
-
