--- a/style.css
+++ b/style.css
@@ -64,10 +64,10 @@ h1 {
     color: #fff;
     background-color: #007bff;
     transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
-    display: inline-flex;
+    height: 50px; /* ارتفاع ثابت */
+    display: flex;
     align-items: center;
     justify-content: center;
-    height: 50px; /* ارتفاع ثابت */
 }
 
 .btn:hover {
@@ -81,6 +81,9 @@ h1 {
     background-color: #28a745;
     border-radius: 5px;
     padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn.copy svg {
